Reduce image fade in duration Add + to space in url back in Max width 850 Padding between li's Reduce padding between bottom of tips and footer Speed up arrow transitions Fix prev/next alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -192,20 +192,20 @@ a:hover {
 }
 
 .hero {
-    padding: 30px 50px;
+    padding: 30px 50px 18px;
 }
 
 .herotitle {
-    display: inline-flex;
     position: relative;
-    max-width: 960px;
+    max-width: 850px;
     margin: 0 auto;
-    padding: 0 100px;
 }
 
 .portrait {
     text-align: center;
     width: 100%;
+    display: block;
+    position: relative;
 }
 
 .portrait-frame {
@@ -394,7 +394,8 @@ a:hover {
     font-size: 24px;
 }
 
-.tips ul li p {
+.tips ul li {
+    margin: 18px 0;
     padding-left: 20px;
 }
 
@@ -407,30 +408,30 @@ a:hover {
     position: relative;
     font-size: 110px;
     display: inline-block;
-    position: absolute;
     top: 50%;
-    margin-top: -78px;
     opacity: 0;
+    position: absolute;
+    margin-top: -67px;
 
-    -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -ms-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity .1s linear;
+    -moz-transition: opacity .1s linear;
+    -ms-transition: opacity .1s linear;
+    -o-transition: opacity .1s linear;
+    transition: opacity .1s linear;
 
-    animation: fadeOut ease-in-out 2s;
+    animation: fadeOut ease-in-out 1s;
     animation-iteration-count: 1;
     transform-origin: 50% 50%;
-    -webkit-animation: fadeOut ease-in-out 2s;
+    -webkit-animation: fadeOut ease-in-out 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
-    -moz-animation: fadeOut ease-in-out 2s;
+    -moz-animation: fadeOut ease-in-out 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
-    -o-animation: fadeOut ease-in-out 2s;
+    -o-animation: fadeOut ease-in-out 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
-    -ms-animation: fadeOut ease-in-out 2s;
+    -ms-animation: fadeOut ease-in-out 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
 }
@@ -527,6 +528,7 @@ a:hover {
     }
 
     .portrait {
+        position: relative;
         padding: 0 100px;
     }
 
@@ -572,7 +574,8 @@ a:hover {
         -o-animation: none;
         -ms-animation: none;
         font-size: 86px;
-        margin-top: -95px;
+        line-height: 52px;
+        margin-top: -31px;
         opacity: 1;
     }
 }
